--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="#">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">SERVICES</a>
+                        <a class="nav-link" href="#">SERVICE </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">DESIGN</a>
